syntax = "proto3";
import "google/protobuf/empty.proto";


option java_multiple_files = true;
option java_package = "sep3.project.protobuf";
option java_outer_classname = "HeartbeatsProto";

service HeartbeatService{
  rpc CreateHeartbeat(RequestCreateHeartbeat) returns(ResponseCreateHeartbeat);
  rpc GetHeartbeat(google.protobuf.Empty) returns(ResponseGetHeartbeats);
}

message HeartbeatData {
  string pulse = 1;
}

message RequestCreateHeartbeat{
  string pulse = 1;
}

message ResponseCreateHeartbeat{
  string pulse = 1;
}

message ResponseGetHeartbeats {
  int32 pulses = 1;
}